--- a/chgmm25.html
+++ b/chgmm25.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <title>GMM 25</title>
+</head>
 <body>
 	<div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> 
 <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://tv.guchill.com/playerdtv4.php?n=gmm-channel&l=1&m=2&autoplay=1" width="100%" height="100%" allowfullscreen allow="autoplay"></iframe> 
