--- a/chtptv.html
+++ b/chtptv.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>TPTV</title>
-  <script type="text/javascript" src="http://cdn.clappr.io/latest/clappr.min.js"></script>
 </head>
 <body>
-  <div id="player"></div>
-  <script>
-    var player = new Clappr.Player({source: "https://tv.trueid.net/embed/tptv?autoplay=1", parentId: "#player"});
-  </script>
-</body>
-
+	<div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> 
+<iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://tv.trueid.net/embed/tptv?autoplay=1" width="100%" height="100%" allowfullscreen allow="autoplay"></iframe> 
+	</div>
 </body>
 </html>
