--- a/j-league.html
+++ b/j-league.html
@@ -5,7 +5,6 @@
     <title>YouTube Live J League</title>
 </head>
 <body>
-	<div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> 
-<iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.youtube.com/embed/T5_0snys16U?autoplay=1" width="100%" height="100%" allowfullscreen allow="autoplay"></iframe> 
-	</div>
+	<iframe width="100%" height="100%" src="http://www.youtube.com/embed/T5_0snys16U" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
+</html>
