--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <title>TV Live Streaming</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdn.plyr.io/3.6.3/plyr.css" />
+	<link rel="stylesheet" href="style.css">
+	<title>Super Sport EPL</title>
 </head>
-<body style="background-image: url('img/bg.jpg'); background-size: cover;  ">
-    <center>
-            <img src="https://img-cdn.we-play.tv/posters/workpoint-poster1602705391.jpeg" style="width: 150px; height: 100px;">
-    <h1>Workpoint TV</h1>
-<div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x6g9qjj?autoplay=true&c=1&am=true" width="100%" height="100%" allowfullscreen allow="autoplay"> </iframe> </div>
+<body>
+	
+	<video id="player" playsinline controls data-poster="https://statics.javkiki.com/images/pornstars/javhihi.com-mei-matsumoto.jpg" width="200" height="150">
+	  <source src="http://tv.iptvstack.net:8080/live/jPvzVSe693/sTspGD310/28896.m3u8" type="application/x-mpegURL" />
+	</video>
 
-    </center>
+	<script src="https://cdn.plyr.io/3.6.3/plyr.polyfilled.js"></script>
 </body>
-
 </html>
