--- a/work.html
+++ b/work.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" dir="ltr" data-cast-api-enabled="true">
 <head>
-    <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Workpoint</title>
 </head>
 <body>
@@ -11,7 +10,7 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.dailymotion.com/embed/video/x6g9qjj?autoplay=1"
                             allow="autoplay;  encrypted-media" allowfullscreen></iframe>
-                            </center>
+            </center>
                 </div>
             </div>
             <style>
@@ -43,7 +42,7 @@
                     .topIcon{
                         padding-top: 100px;
                         margin: 0 auto;
-                        width: 70%;
+                        width: 100%;
                     }
 
                     .topIcon img{
