--- a/mono29.html
+++ b/mono29.html
@@ -38,7 +38,7 @@
                     border-radius: 20px;
                 }
 
-                @media(max-width: 767px){
+                @media(max-width: 1080px;){
                     .topIcon{
                         padding-top: 100px;
                         margin: 0 auto;
